@startuml Diagrama de Clases Controladores
skinparam classAttributeIconSize 0

package Controlador {

    package Alertas {
        class AlertaErrorArchivoJson
        class AlertaNombreFaltante
        class AlertaNombreLargo
        class AlertaOrdenarTodasLasOpcionesOC
        class AlertaSeleccionarUnaOpcion
    }

    package EventHandlers {
        class BotonComenzarJuego
        class BotonComenzarTurno
        class BotonContinuar
        class BotonEntrar
        class BotonResponderMC
        class BotonResponderOC
        class BotonResponderVF
        class BotonResponderOC
        class BotonSalir
        class BotonSeleccionarOpcionOC
        class BotonSiguientePregunta
        class BotonUsarExclusividad
        class BotonUsarMultiplicador
        class HandlerOpcionesOC

}

'Ordenamiento De Cuadrados
AlertaNombreLargo -up[hidden]-> AlertaNombreFaltante
AlertaNombreFaltante -up[hidden]-> AlertaOrdenarTodasLasOpcionesOC
AlertaOrdenarTodasLasOpcionesOC -up[hidden]-> AlertaSeleccionarUnaOpcion
BotonResponderMC -[hidden]-> BotonComenzarJuego
HandlerOpcionesOC -[hidden]-> BotonContinuar
BotonResponderOC -[hidden]-> BotonContinuar
BotonResponderVF -[hidden]-> BotonContinuar
BotonSiguientePregunta -[hidden]-> BotonSalir
BotonSalir -[hidden]-> BotonUsarExclusividad
BotonUsarExclusividad -[hidden]-> BotonUsarMultiplicador

'Herencia --|> cumple la relación 'es un'

'Asociacion --> un objeto guarda a otro

'Agregacion --o un objeto esta compuesto por otro pero no lo necesita para vivir

'Composicion --* un objeto es dueño de otro

'Dependencia ..> un objeto utiliza a otro porque lo recibe/devuelve
BotonComenzarJuego ..> AlertaNombreFaltante
BotonComenzarJuego ..> AlertaNombreLargo
BotonResponderMC ..> AlertaSeleccionarUnaOpcion
BotonResponderVF ..> AlertaSeleccionarUnaOpcion
BotonResponderOC .right.> AlertaOrdenarTodasLasOpcionesOC
BotonSeleccionarOpcionOC ..> HandlerOpcionesOC

'Interfaces ..|> colección de declaraciones de métodos sin implemetnar

@enduml